java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testImplementAbstractMethodsHint6.pass
package org.netbeans.test.java.hints;

/**
 * @author leon chiver
 */
public class ImplementAbstractMethods6 {

    private Runnable r = new Runnable() {
        public void run() {
            throw new UnsupportedOperationException("Not supported yet.");
        }
    };
    
    public ImplementAbstractMethods6() {
    }
    
}
